--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
     {
       "src": "https://picsum.photos/512/512",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "maskable"
     }
   ]
