--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,7 @@
     {
       "src": "https://picsum.photos/192/192",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any"
     },
     {
