--- a/manifest.json
+++ b/manifest.json
@@ -9,16 +9,17 @@
   "theme_color": "#2563eb",
   "icons": [
     {
-      "src": "https://picsum.photos/192/192",
+      "src": "./icon-192.png",
       "sizes": "192x192",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://picsum.photos/512/512",
+      "src": "./icon-512.png",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/png",
       "purpose": "maskable"
     }
   ]
 }
+
