--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,16 @@
   "theme_color": "#2563eb",
   "icons": [
     {
-      "src": "./icon-192.png",
+      "src": "https://placehold.co/192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "./icon-512.png",
+      "src": "https://placehold.co/512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ]
 }
-
